# ai-receptionist

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json  settings.local.json
alembic/: env.py
alembic/versions/: 20260116_111929_initial_schema.py
app/: config.py  main.py
app/api/middleware/: auth.py  rate_limit.py
app/api/routes/: chat.py  health.py
app/core/agent/: __init__.py  base.py  dispatch.py  mcp_bridge.py  router.py  router_types.py
app/core/agent/agents/: __init__.py  (+4 more)
app/core/intelligence/: __init__.py
app/core/response/: __init__.py  generator.py  handoff.py
app/core/scheduling/: __init__.py  calendar_client.py  engine.py  flow.py  response.py
app/infra/: claude.py  database.py  notifications.py  redis.py
app/models/: database.py
app/safety/: __init__.py  audit_logger.py  consent_manager.py  content_filter.py  crisis_detector.py  middleware.py  models.py  patient_verifier.py  pii_detector.py  pipeline.py  sanitizer.py
docs/: ARCHITECTURE.md  SMOKE_TEST_SETUP.md  TECHNICAL_DOCUMENTATION.md  ai-receptionist-system-architecture.drawio  ai-receptionist-v2-architecture.md  architecture-diagram.drawio  architecture.drawio
scripts/: verify_setup.py
tests/: __init__.py  test_safety_integration.py
tests/e2e/: __init__.py  smoke_test_e2e.py
tests/unit/: test_calendar_client.py  test_conversation_flow.py  test_intent_classifier.py  test_response_generator.py  test_scheduling_engine.py  test_session_manager.py  test_slot_extractor.py
(+14 files in other folders)
